[package]
name = "sync-kobo-and-workstation"
authors = ["Louis Jackman"]
version = "0.1.0"
description = "Synchronise books between a workstation and a Kobo e-book reader."
repository = "https://gitlab.com/louis.jackman/sync-kobo-and-workstation"
license = "GPL-3.0-only"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-walkdir = "2.1.0"
clap = { version = "4.5.37", features = ["derive"] }
directories = "6.0.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
whoami = "1.6.0"
